--- a/MLlabs.yml
+++ b/MLlabs.yml
@@ -77,6 +77,10 @@ dependencies:
   - zeromq=4.3.5=ha4adb4c_5
   - zipp=3.20.2=pyhd8ed1ab_0
   - pip:
+      - absl-py==2.3.0
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.12.9
+      - aiosignal==1.3.2
       - anyio==4.8.0
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
@@ -97,7 +101,9 @@ dependencies:
       - fire==0.7.0
       - fonttools==4.54.1
       - fqdn==1.5.1
+      - frozenlist==1.6.2
       - fsspec==2025.3.0
+      - grpcio==1.72.1
       - h11==0.14.0
       - httpcore==1.0.7
       - httpx==0.28.1
@@ -121,12 +127,15 @@ dependencies:
       - jupyterlab-server==2.27.3
       - kiwisolver==1.4.7
       - lazy-loader==0.4
+      - lightning==2.5.1.post0
       - lightning-utilities==0.14.2
+      - markdown==3.8
       - markupsafe==3.0.2
       - matplotlib==3.9.2
       - medmnist==3.0.2
       - mistune==3.1.2
       - mpmath==1.3.0
+      - multidict==6.4.4
       - nbclient==0.10.2
       - nbconvert==7.16.6
       - nbformat==5.10.4
@@ -152,10 +161,13 @@ dependencies:
       - pillow==10.4.0
       - pip==25.1.1
       - prometheus-client==0.21.1
+      - propcache==0.3.1
+      - protobuf==6.31.1
       - pycparser==2.22
       - pyparsing==3.1.4
       - python-dateutil==2.9.0.post0
       - python-json-logger==3.3.0
+      - pytorch-lightning==2.5.1.post0
       - pyyaml==6.0.2
       - referencing==0.36.2
       - requests==2.32.3
@@ -171,6 +183,8 @@ dependencies:
       - soupsieve==2.6
       - statsmodels==0.14.4
       - sympy==1.13.1
+      - tensorboard==2.19.0
+      - tensorboard-data-server==0.7.2
       - termcolor==2.5.0
       - terminado==0.18.1
       - threadpoolctl==3.5.0
@@ -188,5 +202,7 @@ dependencies:
       - webcolors==24.11.1
       - webencodings==0.5.1
       - websocket-client==1.8.0
+      - werkzeug==3.1.3
       - wheel==0.45.1
+      - yarl==1.20.0
 prefix: /home/katzkid/miniforge3/envs/MLlabs
