--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,27 @@ weights
 lightning_logs
 checkpoints
 pickle
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+*.pkl
+*.pkl.gz
+*.pkl.bz2
+*.pkl.xz
+*.pkl.zst
+*.pkl.lz4
+*.pkl.lzo
+*.pkl.lzma
+*.pkl.lz4
+*.pkl.snappy
+*.pkl.zstd
+*.pkl.tar
+*.pkl.zip
+*.pkl.tar.gz
+*.pkl.tar.bz2
+*.pkl.tar.xz
+*.pkl.tar.lz4
+*.pkl.tar.lzo
+*.pkl.tar.lzma
+*.pkl.tar.snappy
